<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#424242"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.details.DetailsActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="#D53A47"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="UnusedAttribute">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Pokemon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_type"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/height"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="24.0 KG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_type"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="24.0 KG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/height"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type1"
            tools:text="24.0 KG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintTop_toTopOf="@+id/weight"
            tools:text="24.0 KG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/weight"
            android:textColor="#C3C0C0"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight"
            tools:text="Weight" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/height"
            android:textColor="#C3C0C0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toBottomOf="@id/height" />

        <ProgressBar
            android:id="@+id/progress_hp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="300"
            android:layout_marginEnd="10dp"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tv_hp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_attack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hp"
            android:text="@string/atk"
            />

        <ProgressBar
            android:id="@+id/progress_atk"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="300"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_attack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_hp"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_defense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_attack"
            android:text="@string/def"/>

        <ProgressBar
            android:id="@+id/progress_def"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="300"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_defense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_attack"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_spc_atk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_defense"
            android:text="@string/spc_atk" />

        <ProgressBar
            android:id="@+id/progress_special_attack"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="300"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_spc_atk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_defense"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_spc_def"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_spc_atk"
            android:text="@string/spc_def" />

        <ProgressBar
            android:id="@+id/progress_special_defense"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="300"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_spc_def"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_spc_atk"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_spc_def"
            android:text="@string/speed"/>

        <ProgressBar
            android:id="@+id/progress_speed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="300"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_spc_def"
            android:layout_marginEnd="10dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="106dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_base_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_start"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/progress_hp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_base_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
